# spd

./: HISTORY.txt  README.txt  makefile  spd
spkg/: gen_html  install
spkg/base/: .hgignore  README.txt  bzip2-1.0.5-install  prereq-0.3-install  prereq-0.3.tar  sage-env  sage-spkg  stdint.h_Solaris9
spkg/base/.hg/: branch.cache  dirstate  undo.dirstate
spkg/base/.hg/store/: 00changelog.i  00manifest.i  undo
spkg/base/prereq-0.3/: Makefile.in  configure  configure.ac
spkg/base/prereq-0.3/.hg/: dirstate  undo.dirstate
spkg/base/prereq-0.3/.hg/store/: 00changelog.i  00manifest.i  undo
spkg/base/prereq-0.3/.hg/store/data/: _makefile.in.i  configure.ac.i  configure.i
spkg/base/prereq-0.3/.hg/store/data/autom4te.cache/: output.0.i  requests.i  traces.0.i
spkg/standard/: deps  download_packages  newest_version
spkg/standard/sage_scripts/: install  ipy_profile_sage.py  sage-README-osx.txt  sage-banner  sage-build  sage-check-libraries.py  sage-cleaner  sage-clone  sage-combinat  sage-coverage  sage-coverageall  sage-cython  sage-doctest  sage-download_package  sage-dsage-trial  sage-env  sage-fixdoctests  sage-grep  sage-ipython  sage-libdist  sage-list-packages  sage-location  sage-make_devel_packages  sage-make_relative  sage-maketest  sage-monitor  sage-notebook  sage-pkg  sage-pkg-nocompress  sage-preparse  sage-ptest  sage-rebase_sage.sh  sage-run  sage-run2  sage-sage  sage-sdist  sage-spkg-install  sage-starts  sage-startuptime.py  sage-test  (+3 more)
spkg/standard/sage_scripts/ipython/: ipythonrc
spkg/standard/sage_scripts/matplotlib/: matplotlibrc
(+10 files in other folders)
